Fixed issue where source map was cached, causing debugger to fail Fixed issue with canvas sizing, it is all done in code now, no CSS used Fixed issue (I hope) where scrolling to end results in index to high when trying to render samples Fixed warning related to type casting issue Fixed issue with canvas not accounting for scrollbar/sidebar correctly

--- a/webmon/css/main.css
+++ b/webmon/css/main.css
@@ -26,10 +26,10 @@ body{
 
 canvas{
     position: absolute;
-    height: calc(100vh - 20px);
+    /* height: calc(100vh - 20px); */
+    /* width: calc(100vw - 170px); */
     top: 0;
-    
-    left: 170px;
+    right: 0;
     cursor: grab;
     z-index: 3;
 }
